[workspace]

members = [
    "dispatch_examples/greeter",
    "frc42_dispatch",
    "frc42_dispatch/hasher",
    "frc42_dispatch/macros",
    "frc42_dispatch/macros/example",
    "frc46_token",
    "frc53_nft",
    "fvm_actor_utils",
    "fvm_dispatch_tools",
    "testing/integration",
    "testing/test_actors",
    "testing/test_actors/actors/*",
    "testing/test_actors/actors/frc46_factory_token/token_impl",
]

[profile.wasm]
inherits = "release"
panic = "abort"
overflow-checks = false
lto = true
opt-level = "z"
strip = true
codegen-units = 1
incremental = false

[patch.crates-io]
cid = { version = "0.10.1", git = "https://github.com/multiformats/rust-cid", rev = "v0.10.1" }
fvm_ipld_bitfield = { git = "https://github.com/cryptonemo/ref-fvm", branch = "synthetic-porep" }
fvm_ipld_blockstore = { git = "https://github.com/cryptonemo/ref-fvm", branch = "synthetic-porep" }
fvm_ipld_hamt = { git = "https://github.com/cryptonemo/ref-fvm", branch = "synthetic-porep" }
fvm_ipld_amt = { git = "https://github.com/cryptonemo/ref-fvm", branch = "synthetic-porep" }
fvm_ipld_encoding = { git = "https://github.com/cryptonemo/ref-fvm", branch = "synthetic-porep" }
fvm_sdk = { git = "https://github.com/cryptonemo/ref-fvm", branch = "synthetic-porep" }
fvm_shared = { git = "https://github.com/cryptonemo/ref-fvm", branch = "synthetic-porep" }
fvm_integration_tests = { git = "https://github.com/cryptonemo/ref-fvm", branch = "synthetic-porep" }
